@@ -4,6 +4,7 @@
 #ifndef SERD_SRC_NODE_H
 #define SERD_SRC_NODE_H
 
+#include "exess/exess.h"
 #include "serd/attributes.h"
 #include "serd/node.h"
 #include "serd/string_view.h"
@@ -45,5 +46,11 @@ serd_node_zero_pad(SerdNode* SERD_NONNULL node);
 /// Create a new URI from a string, resolved against a base URI
 SerdNode* SERD_ALLOCATED
 serd_new_resolved_uri(SerdStringView string, SerdURIView base_uri);
+
+ExessResult
+serd_node_get_value_as(const SerdNode* SERD_NONNULL node,
+                       ExessDatatype                value_type,
+                       size_t                       value_size,
+                       void* SERD_NONNULL           value);
 
 #endif // SERD_SRC_NODE_H
