@@ -3,14 +3,12 @@
 
 #include "string_utils.h"
 
-#include "exess/exess.h"
 #include "serd/memory.h"
 #include "serd/node.h"
 #include "serd/status.h"
 #include "serd/string.h"
 
 #include <assert.h>
-#include <math.h>
 #include <stdlib.h>
 #include <string.h>
 
@@ -94,16 +92,4 @@ serd_strlen(const char* const str, SerdNodeFlags* const flags)
   }
 
   return strlen(str);
-}
-
-double
-serd_strtod(const char* const str, const char** const end)
-{
-  double            value = (double)NAN;
-  const ExessResult r     = exess_read_double(&value, str);
-  if (end) {
-    *end = str + r.count;
-  }
-
-  return r.status ? (double)NAN : value;
 }
