@@ -6,7 +6,10 @@ Checks: >
   -android-cloexec-fopen,
   -bugprone-easily-swappable-parameters,
   -bugprone-reserved-identifier,
+  -bugprone-suspicious-memory-comparison,
   -cert-err33-c,
+  -cert-exp42-c,
+  -cert-flp37-c,
   -clang-analyzer-nullability.NullableDereferenced,
   -clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling,
   -concurrency-mt-unsafe,
