@@ -1,6 +1,7 @@
 serd (1.1.1) unstable; urgency=medium
 
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
+  * Add support for xsd:float and xsd:double literals
   * Bring read/write interface closer to C standard
   * Make nodes opaque
   * Remove SERD_DISABLE_DEPRECATED and SERD_DEPRECATED_BY
